syntax = "proto3";

package command;

import "gateway.proto";

service OnlinePvp {
    rpc OnlinePvpStream(stream Online2PvpInfo) returns (stream Pvp2OnlineInfo){};
}

service GatewayOnline{
    rpc GatewayOnlineStream(stream ClientPlayerMsgData) returns (stream ClientPlayerMsgData){};
}

//
message Online2PvpInfo{
    bytes msg =1;
}

//
message Pvp2OnlineInfo{
    bytes msg =1;
}

//message Gateway2OnlineInfo{
//   bytes msg =1;
//}

//
//message Online2GatewayInfo{
//    bytes msg =1;
//}